Create initial DB evolution

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,6 +38,14 @@ application.secret="OGN8;pHBoMw5SD`Va8IKuhQTS<le5a8wOFynsj9hQ3^:1Nlv2GgLDk:f_CTw
 # db.default.user=sa
 # db.default.password=""
 
+# Default database configuration using MySQL database engine
+# Connect to playdb as playdbuser
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/playdb"
+db.default.user=root
+db.default.pass="admin"
+
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
