Configuring application secret

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,8 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="OGN8;pHBoMw5SD`Va8IKuhQTS<le5a8wOFynsj9hQ3^:1Nlv2GgLDk:f_CTwcJpb"
+application.secret="changeme"
+application.secret=${?APPLICATION_SECRET}
 
 # The application languages
 # ~~~~~
