Change DBMS to PostgreSQL
Doesn't work correctly due to conflict with reserved PostgerSQL word
'user'.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,9 +41,10 @@ application.secret=${?APPLICATION_SECRET}
 
 # Default database configuration using MySQL database engine
 # Connect to playdb as root
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/playdb"
-db.default.user=root
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost:5433/playdb?autoReconnect=true"
+#db.default.url="postgres://root:admin@localhost:5432/playdb"
+db.default.user=postgres
 db.default.pass="admin"
 db.default.jndiName=DefaultDS
 
