A try to use heroku db settings

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,9 +43,9 @@ application.secret=${?APPLICATION_SECRET}
 # Connect to playdb as root
 db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://localhost:5433/playdb?autoReconnect=true"
-#db.default.url="postgres://root:admin@localhost:5432/playdb"
-db.default.user=postgres
-db.default.pass="admin"
+#db.default.url="postgres://mdplhslyejqhev:oenGO5OUaI66kqGiWiZSWowp9Z@ec2-54-163-248-144.compute-1.amazonaws.com:5432/playdb"
+db.default.user=mdplhslyejqhev
+db.default.pass="oenGO5OUaI66kqGiWiZSWowp9Z"
 db.default.jndiName=DefaultDS
 
 # Default JPA Unit
