--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,7 +42,7 @@ application.secret=${?APPLICATION_SECRET}
 # Default database configuration using MySQL database engine
 # Connect to playdb as root
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://localhost:5433/playdb?autoReconnect=true"
+db.default.url="postgres://mdplhslyejqhev:oenGO5OUaI66kqGiWiZSWowp9Z@ec2-54-163-248-144.compute-1.amazonaws.com:5432/d6il1pkuo0tdcv"
 #db.default.url="postgres://mdplhslyejqhev:oenGO5OUaI66kqGiWiZSWowp9Z@ec2-54-163-248-144.compute-1.amazonaws.com:5432/playdb"
 db.default.user=mdplhslyejqhev
 db.default.pass="oenGO5OUaI66kqGiWiZSWowp9Z"
