Correct DB settings v8

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,7 +43,7 @@ application.secret=${?APPLICATION_SECRET}
 # Connect to playdb as root
 db.default.driver=org.postgresql.Driver
 #db.default.url="jdbc:postgresql://mdplhslyejqhev:oenGO5OUaI66kqGiWiZSWowp9Z@ec2-54-163-248-144.compute-1.amazonaws.com:5432/d6il1pkuo0tdcv"
-db.default.url="jdbc:postgresql://ec2-54-163-248-144.compute-1.amazonaws.com:5432/d6il1pkuo0tdcv?user=mdplhslyejqhev&password=oenGO5OUaI66kqGiWiZSWowp9Z"
+db.default.url="jdbc:postgresql://mdplhslyejqhev:oenGO5OUaI66kqGiWiZSWowp9Z@ec2-54-163-248-144.compute-1.amazonaws.com:5432/d6il1pkuo0tdcv"
 #db.default.url="postgres://mdplhslyejqhev:oenGO5OUaI66kqGiWiZSWowp9Z@ec2-54-163-248-144.compute-1.amazonaws.com:5432/playdb"
 db.default.user=mdplhslyejqhev
 db.default.pass="oenGO5OUaI66kqGiWiZSWowp9Z"
