--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,7 +42,8 @@ application.secret=${?APPLICATION_SECRET}
 # Default database configuration using MySQL database engine
 # Connect to playdb as root
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://mdplhslyejqhev:oenGO5OUaI66kqGiWiZSWowp9Z@ec2-54-163-248-144.compute-1.amazonaws.com:5432/d6il1pkuo0tdcv"
+db.default.url="jdbc:postgresql://mdplhslyejqhev:oenGO5OUaI66kqGiWiZSWowp9Z@ec2-54-163-248-144.compute-1.amazonaws.com:5432/d6il1pkuo0tdcv?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory"
+#db.default.url=${?DATABASE_URL}
 db.default.user=mdplhslyejqhev
 db.default.pass="oenGO5OUaI66kqGiWiZSWowp9Z"
 db.default.jndiName=DefaultDS
